# lazarus

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
src/lazarus/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  watchdog.py
src/lazarus/compat/: __init__.py  analyzer.py  failures.py  tester.py
src/lazarus/db/: __init__.py  migrations.py  models.py  queue.py
src/lazarus/fixer/: __init__.py  auto.py  claude.py  patcher.py
src/lazarus/publisher/: __init__.py  builder.py  uploader.py  versioning.py
src/lazarus/pypi/: __init__.py  client.py  metadata.py  top_packages.py
src/lazarus/server/: __init__.py  config.py  deploy.py
tests/: conftest.py  test_pipeline.py  test_watchdog.py
tests/test_compat/: test_analyzer.py
tests/test_db/: test_queue.py
tests/test_fixer/: test_auto.py
tests/test_publisher/: test_uploader.py  test_versioning.py
tests/test_pypi/: test_client.py
